--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,6 @@
-.idea/**
+.idea
 # Byte-compiled / optimized / DLL files
 __pycache__/
-*.py[cod]
-
 # C extensions
 *.so
 
@@ -58,3 +56,4 @@ logs/**
 /settings.py
 /dummy.py
 /update.py
+.DS_Store
