--- a/requirements.txt
+++ b/requirements.txt
@@ -18,6 +18,7 @@ pyexcel-webio==0.1.2
 pyexcel-xlsx==0.4.1
 pymongo==3.4.0
 pytest==2.6.4
+pydash==4.1.0
 python-gnupg==0.3.9
 requests==2.18.2
 shortid==0.1.2
