--- a/requirements.txt
+++ b/requirements.txt
@@ -31,5 +31,5 @@ wikipedia==1.4.0
 WeasyPrint==0.39
 Flask-WeasyPrint==0.5
 rpy2==2.8.5
-geojson=1.3.5
-sortedcontainers=1.5.7
+geojson==1.3.5
+sortedcontainers==1.5.7
